Modified buttons in GUI

--- a/GUI-LifeExpectancy/GUI-LifeExpectancy/MainWindow.xaml
+++ b/GUI-LifeExpectancy/GUI-LifeExpectancy/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:chartingToolkit="clr-namespace:System.Windows.Controls.DataVisualization.Charting;assembly=System.Windows.Controls.DataVisualization.Toolkit" x:Class="Project.SubWindow"
         Title="Chicago Data Portal" 
         
-        Background="WhiteSmoke" WindowStartupLocation="CenterScreen" Width="6271.8">
+        Background="WhiteSmoke" WindowStartupLocation="CenterScreen" Width="6271.8" Height="683.513333333333">
     <Window.Effect>
         <DropShadowEffect/>
     </Window.Effect>
@@ -24,8 +24,8 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
 
-            <RowDefinition Height="199*" />
-            <RowDefinition Height="136*"/>
+            <RowDefinition Height="639*" />
+            <RowDefinition Height="6*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="0*"/>
@@ -35,59 +35,102 @@
             <ColumnDefinition Width="1365"/>
             <ColumnDefinition Width="0"/>
             <ColumnDefinition Width="0"/>
-
+            <ColumnDefinition Width="4885*" />
         </Grid.ColumnDefinitions>
-        <CheckBox Content="Life Expectancy and Poverty" HorizontalAlignment="Left" Margin="138,63,0,0" VerticalAlignment="Top"  x:Name="LifePoverty" Grid.Row="2" Grid.Column="4" Foreground="Gray" FontFamily="Tahoma" FontSize="13" Height="15" Width="182" />
-        <CheckBox Content="Life Expectancy and Unemployment" HorizontalAlignment="Left" Margin="138,85,0,0" VerticalAlignment="Top"  x:Name="LifeUnemployment" Grid.Row="2" Grid.Column="4" Foreground="Gray" FontFamily="Tahoma" FontSize="13" Height="15" Width="225" />
-        <CheckBox Content="Life Expectancy and per Capita Income" HorizontalAlignment="Left" Margin="138,107,0,0" VerticalAlignment="Top"  x:Name="LifeperCapita" Grid.Row="2" Grid.Column="4" Foreground="Gray" FontFamily="Tahoma" FontSize="13" Height="15" Width="244" />
-        <Button Content="Calculate Correlation" HorizontalAlignment="Left" Margin="134,135,0,0" VerticalAlignment="Top" Width="128" Click="Button_Click" Grid.Column="4" Grid.Row="2" Height="20" />
+        <CheckBox Content="Life Expectancy and Poverty" HorizontalAlignment="Left" Margin="903,448,0,0" VerticalAlignment="Top"  x:Name="LifePoverty" Grid.Row="1" Grid.Column="4" Foreground="Gray" FontFamily="Tahoma" FontSize="13" Height="15" Width="182" />
+        <CheckBox Content="Life Expectancy and Unemployment" HorizontalAlignment="Left" Margin="903,470,0,0" VerticalAlignment="Top"  x:Name="LifeUnemployment" Grid.Row="1" Grid.Column="4" Foreground="Gray" FontFamily="Tahoma" FontSize="13" Height="15" Width="225" />
+        <CheckBox Content="Life Expectancy and per Capita Income" HorizontalAlignment="Left" Margin="903,492,0,0" VerticalAlignment="Top"  x:Name="LifeperCapita" Grid.Row="1" Grid.Column="4" Foreground="Gray" FontFamily="Tahoma" FontSize="13" Height="15" Width="244" />
+        <Button Content="Calculate Correlation" HorizontalAlignment="Left" Margin="863,520,0,0" VerticalAlignment="Top" Width="128" Click="Button_Click" Grid.Column="4" Grid.Row="1" Height="20" ToolTip="Click here to find out the correlation" Cursor="Hand" >
+            <Button.Effect>
+                <DropShadowEffect/>
+            </Button.Effect>
+        </Button>
         <TextBox HorizontalAlignment="Left"
 			ScrollViewer.HorizontalScrollBarVisibility="Auto"
 			ScrollViewer.VerticalScrollBarVisibility="Auto"
 			ScrollViewer.CanContentScroll="True"
-			Height="75" Margin="111,185,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="349" x:Name="ResultBox" Grid.Row="2" Grid.Column="4" />
-        <Button Content="Clear" HorizontalAlignment="Left" Margin="353,135,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1" Grid.Column="4" Grid.Row="2" Height="20" />
-        <Label Content="Find the Correlation between:" HorizontalAlignment="Left" VerticalAlignment="Top" Target="{Binding}" Grid.Column="4" Grid.Row="2" FontWeight="Bold" FontFamily="Tahoma" Foreground="Gray" Margin="134,32,0,0" FontSize="15" Height="28" Width="235" />
-        <Label Content="Life Expectancy Based on Socio Economic Indicators&#xD;&#xA;                                 City of Chicago" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontFamily="Californian FB" FontSize="24" Background="#FF0009D1" Foreground="White" Margin="0,120,0,200" ScrollViewer.HorizontalScrollBarVisibility="Visible" FontWeight="Bold" Grid.Column="4" Grid.Row="1">
+			Height="75" Margin="845,570,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="349" x:Name="ResultBox" Grid.Row="1" Grid.Column="4" Grid.RowSpan="2" />
+        <Button Content="Clear" HorizontalAlignment="Left" Margin="1082,520,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1" Grid.Column="4" Grid.Row="1" Height="20" ToolTip="Click here to clear the results box" Cursor="Hand" >
+            <Button.Effect>
+                <DropShadowEffect/>
+            </Button.Effect>
+        </Button>
+        <Label Content="Find the Correlation between:" HorizontalAlignment="Left" VerticalAlignment="Top" Target="{Binding}" Grid.Column="4" Grid.Row="1" FontWeight="Bold" FontFamily="Tahoma" Foreground="Gray" Margin="893,406,0,0" FontSize="15" Height="28" Width="235" Background="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}" >
             <Label.Effect>
                 <DropShadowEffect/>
             </Label.Effect>
         </Label>
-        <Button Content="Life Expectancy Statistics" HorizontalAlignment="Left" Margin="1020,220,0,0" Grid.Row="1" VerticalAlignment="Top" Width="345" Height="40" Click="Button_Click_2" Background="{DynamicResource {x:Static SystemColors.ScrollBarBrushKey}}" BorderBrush="{DynamicResource {x:Static SystemColors.MenuTextBrushKey}}" Cursor="Hand" OpacityMask="{DynamicResource {x:Static SystemColors.HotTrackBrushKey}}" Grid.Column="4" ToolTip="Click here to view  Life Expectancy in different communities">
+        <Label Content="Life Expectancy Based on Socio Economic Indicators&#xD;&#xA;                                 City of Chicago" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontFamily="Californian FB" FontSize="24" Background="#FF0009D1" Foreground="White" Margin="0,120,0,454" ScrollViewer.HorizontalScrollBarVisibility="Visible" FontWeight="Bold" Grid.Column="4" Grid.Row="1">
+            <Label.Effect>
+                <DropShadowEffect/>
+            </Label.Effect>
+        </Label>
+        <Button Content="Life Expectancy Statistics" HorizontalAlignment="Left" Margin="1020,220,0,0" Grid.Row="1" VerticalAlignment="Top" Width="345" Height="40" Click="Button_Click_2" Background="{DynamicResource {x:Static SystemColors.ScrollBarBrushKey}}" BorderBrush="{DynamicResource {x:Static SystemColors.MenuTextBrushKey}}" Cursor="Hand" OpacityMask="{DynamicResource {x:Static SystemColors.HotTrackBrushKey}}" Grid.Column="4" ToolTip="Click here to view  Life Expectancy in different communities" FontSize="14">
             <Button.Effect>
                 <DropShadowEffect BlurRadius="0"/>
             </Button.Effect>
         </Button>
-        <Button Content="Poverty Statistics" Grid.Column="4" HorizontalAlignment="Left" Margin="0,220,0,0" Grid.Row="1" VerticalAlignment="Top" Width="340" Click="Button_Click_4" Height="40" ToolTip="Click here to view poverty in different communities" Cursor="Hand">
+        <Button Content="Poverty Statistics" Grid.Column="4" HorizontalAlignment="Left" Margin="0,220,0,0" Grid.Row="1" VerticalAlignment="Top" Width="340" Click="Button_Click_4" Height="40" ToolTip="Click here to view poverty in different communities" Cursor="Hand" FontSize="14">
             <Button.Effect>
                 <DropShadowEffect BlurRadius="0"/>
             </Button.Effect>
         </Button>
-        <Button Content="Unemployment Statistics" Grid.Column="4" HorizontalAlignment="Right" Margin="0,220,685,0" Grid.Row="1" VerticalAlignment="Top" Width="340" Height="40" Click="Button_Click_5" ToolTip="Click here to view  Unemployment in different communities" Cursor="Hand">
+        <Button Content="Unemployment Statistics" Grid.Column="4" HorizontalAlignment="Left" Margin="340,220,0,0" Grid.Row="1" VerticalAlignment="Top" Width="340" Height="40" Click="Button_Click_5" ToolTip="Click here to view  Unemployment in different communities" Cursor="Hand" FontSize="14">
             <Button.Effect>
                 <DropShadowEffect BlurRadius="0"/>
             </Button.Effect>
         </Button>
-        <Button Content="Per Capita Income Statistics" Grid.Column="4" HorizontalAlignment="Left" Margin="680,220,0,0" Grid.Row="1" VerticalAlignment="Top" Width="340" Height="40" Click="Button_Click_6" ToolTip="Click here to view per Capita Statistics in different communities" Cursor="Hand">
+        <Button Content="Per Capita Income Statistics" Grid.Column="4" HorizontalAlignment="Left" Margin="680,220,0,0" Grid.Row="1" VerticalAlignment="Top" Width="340" Height="40" Click="Button_Click_6" ToolTip="Click here to view per Capita Statistics in different communities" Cursor="Hand" FontSize="14">
             <Button.Effect>
                 <DropShadowEffect BlurRadius="0"/>
             </Button.Effect>
         </Button>
-        <Button Content="Line Trend" Grid.Column="4" HorizontalAlignment="Left" Margin="196,366,0,0" Grid.Row="1" VerticalAlignment="Top" Width="66" Height="36" Click="Button_Click_7" ToolTip="Click here to view the trend of life Expectancy in Chicago " Grid.RowSpan="2" />
-        <ComboBox Grid.Column="4" HorizontalAlignment="Left" Margin="10,363,0,0" Grid.Row="1" VerticalAlignment="Top" Width="159" Loaded="ComboBox_Loaded" SelectionChanged="ComboBox_SelectionChanged" Name ="comboBox1" Height="36" ToolTip="Select a comunity from the drop down below to view the life expectancy trend" Grid.RowSpan="2" />
-        <Label Grid.Column="4" HorizontalAlignment="Left" Margin="345,68,0,0" Grid.Row="2" VerticalAlignment="Top" Height="10" Width="10"/>
-        <Label Content="Life Expectancy Trend" Grid.Column="4" HorizontalAlignment="Left" Margin="10,322,0,0" Grid.Row="1" VerticalAlignment="Top" Height="34" Width="143" FontSize="14"/>
-        <Image Grid.Column="4" Grid.Row="1" Height="120" HorizontalAlignment="Left" Margin="1540,0,0,0" Name="image8" Stretch="Fill" VerticalAlignment="Top" Width="220" Source="/GUI-LifeExpectancy;component/Images/flag1.jpg" />
-        <Image Grid.ColumnSpan="5" HorizontalAlignment="Left" Height="115" Grid.RowSpan="2" VerticalAlignment="Top" Width="142" Source="flag1.jpg" Margin="138,0,0,0"/>
-        <Image HorizontalAlignment="Left" Height="115" Grid.RowSpan="2" VerticalAlignment="Top" Width="142" Source="flag12.jpg" Margin="276,0,0,0" Grid.Column="4"/>
-        <Image HorizontalAlignment="Left" Height="115" Grid.RowSpan="2" VerticalAlignment="Top" Width="142" Source="flag13.jpg" Margin="418,0,0,0" Grid.Column="4"/>
-        <Image HorizontalAlignment="Left" Height="115" Grid.RowSpan="2" VerticalAlignment="Top" Width="142" Source="flag14.jpg" Margin="560,0,0,0" Grid.Column="4"/>
-        <Image HorizontalAlignment="Left" Height="115" Grid.RowSpan="2" VerticalAlignment="Top" Width="142" Source="flag14.jpg" Margin="702,0,0,0" Grid.Column="4"/>
-        <Image HorizontalAlignment="Left" Height="115" Grid.RowSpan="2" VerticalAlignment="Top" Width="142" Source="flag14.jpg" Margin="844,0,0,0" Grid.Column="4"/>
-        <Image HorizontalAlignment="Left" Height="115" Grid.RowSpan="2" VerticalAlignment="Top" Width="142" Source="flag14.jpg" Margin="986,0,0,0" Grid.Column="4"/>
-        <Image HorizontalAlignment="Left" Height="115" Grid.RowSpan="2" VerticalAlignment="Top" Width="142" Source="flag14.jpg" Margin="1128,0,0,0" Grid.Column="4"/>
-        <Image HorizontalAlignment="Left" Height="115" Grid.RowSpan="2" VerticalAlignment="Top" Width="142" Source="flag14.jpg" Margin="1270,0,-44,0" Grid.Column="4" Grid.ColumnSpan="3"/>
-        <Image HorizontalAlignment="Left" Height="115" Grid.RowSpan="2" VerticalAlignment="Top" Width="142" Source="flag1.jpg" Margin="-4,0,0,0" Grid.ColumnSpan="5"/>
-        <Button Content="Pie" Grid.Column="4" HorizontalAlignment="Left" Margin="276,32,0,0" Grid.Row="2" VerticalAlignment="Top" Width="69" Height="35" Click="Button_Click_9" ToolTip="Click here to see the pie chart distribution of Socio Economic Indicators"/>
+        <Button Content="Check the Trend" Grid.Column="4" HorizontalAlignment="Left" Margin="115,619,0,0" Grid.Row="1" VerticalAlignment="Top" Width="110" Height="36" Click="Button_Click_7" ToolTip="Click here to view the trend of life Expectancy in Chicago.Select community from the drop down below" Grid.RowSpan="2" Cursor="Hand" >
+            <Button.Effect>
+                <DropShadowEffect/>
+            </Button.Effect>
+        </Button>
+        <ComboBox Grid.Column="4" HorizontalAlignment="Left" HorizontalContentAlignment="Center" Margin="232,529,0,0" Grid.Row="1" VerticalAlignment="Top" Width="150" Loaded="ComboBox_Loaded" SelectionChanged="ComboBox_SelectionChanged" Name ="comboBox1" Height="30" ToolTip="Select a comunity from the drop down below to view the life expectancy trend" Cursor="Hand" >
+            <ComboBox.Effect>
+                <DropShadowEffect/>
+            </ComboBox.Effect>
+        </ComboBox>
+        <Label Grid.Column="4" HorizontalAlignment="Left" Margin="345,453,0,0" Grid.Row="1" VerticalAlignment="Top" Height="10" Width="10"/>
+        <Label Content="Life Expectancy for the year 1990, 2000 and 2010" Grid.Column="4" HorizontalAlignment="Left" Margin="28,570,0,0" Grid.Row="1" VerticalAlignment="Top" Height="34" Width="312" FontSize="14" Background="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}" >
+            <Label.Effect>
+                <DropShadowEffect/>
+            </Label.Effect>
+        </Label>
+        <Image Grid.Column="7" Grid.Row="1" Height="120" HorizontalAlignment="Left" Margin="1540,0,0,0" Name="image8" Stretch="Fill" VerticalAlignment="Top" Width="220" Source="/GUI-LifeExpectancy;component/Images/flag1.jpg" />
+        <Image HorizontalAlignment="Left" Height="115" VerticalAlignment="Top" Width="142" Source="flag1.jpg" Margin="138,0,0,0" Grid.Column="4" Grid.Row="1" />
+        <Image HorizontalAlignment="Left" Height="115" VerticalAlignment="Top" Width="142" Source="flag12.jpg" Margin="276,0,0,0" Grid.Column="4" Grid.Row="1" />
+        <Image HorizontalAlignment="Left" Height="115" VerticalAlignment="Top" Width="142" Source="flag13.jpg" Margin="418,0,0,0" Grid.Column="4" Grid.Row="1" />
+        <Image HorizontalAlignment="Left" Height="115" VerticalAlignment="Top" Width="142" Source="flag14.jpg" Margin="560,0,0,0" Grid.Column="4" Grid.Row="1" />
+        <Image HorizontalAlignment="Left" Height="115" VerticalAlignment="Top" Width="142" Source="flag14.jpg" Margin="702,0,0,0" Grid.Column="4" Grid.Row="1" />
+        <Image HorizontalAlignment="Left" Height="115" VerticalAlignment="Top" Width="142" Source="flag14.jpg" Margin="844,0,0,0" Grid.Column="4" Grid.Row="1" />
+        <Image HorizontalAlignment="Left" Height="115" VerticalAlignment="Top" Width="142" Source="flag14.jpg" Margin="986,0,0,0" Grid.Column="4" Grid.Row="1" />
+        <Image HorizontalAlignment="Left" Height="115" VerticalAlignment="Top" Width="142" Source="flag14.jpg" Margin="1128,0,0,0" Grid.Column="4" Grid.Row="1" />
+        <Image HorizontalAlignment="Left" Height="115" VerticalAlignment="Top" Width="142" Source="flag14.jpg" Margin="1270,0,0,0" Grid.Column="4" Grid.ColumnSpan="4" Grid.Row="1" />
+        <Image HorizontalAlignment="Left" Height="115" VerticalAlignment="Top" Width="142" Source="flag1.jpg" Margin="-4,0,0,0" Grid.ColumnSpan="5" Grid.Row="1" />
+        <Button Content="Check the Statistics" Grid.Column="4" HorizontalAlignment="Left" Margin="403,616,0,0" Grid.Row="1" VerticalAlignment="Top" Width="131" Height="37" Click="Button_Click_9" Grid.RowSpan="2" Cursor="Hand" >
+            <Button.Effect>
+                <DropShadowEffect/>
+            </Button.Effect>
+        </Button>
+        <Label Content="There are more than 200 neighbourhoods in Chicago but there is no official list of the city's &#xD; neighbourhoods  or their boundaries. Neighborhood names and identities have evolved over &#xD; time due to real estate development  and changing demographics. Chicago is also divided into &#xD; 78 community areas which were drawn by University of Chicago researchers in 1920s. There &#xD; are various Socio-Economic indicators which play a major role in determining the life-expectancy &#xD; in these neighbourhoods. &#xD;&#xD; Select the neighbourhood from the drop box, to get a graphical layout of socio-economic &#xD; indicator prevailing in the particular area.  Also check the trend of life-Expectancy in the year &#xD; 1990, 2000 and 2010 in the neighbourhood." Grid.Row="1" Height="204" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="10,281,0,0" Name="label1" VerticalAlignment="Top" Grid.Column="4" FontSize="14" BorderBrush="Black" Cursor="Hand" Background="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}" >
+            <Label.Effect>
+                <DropShadowEffect/>
+            </Label.Effect>
+        </Label>
+        <Label Content="Socio-Economic Indicators Analysis " Grid.Column="4" Grid.Row="1" Height="34" HorizontalAlignment="Right" Margin="0,570,770,0" Name="label2" VerticalAlignment="Top" FontSize="14" Background="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}" Width="231" >
+            <Label.Effect>
+                <DropShadowEffect/>
+            </Label.Effect>
+        </Label>
+        <Label Content="Select the Neighbourhood name from the drop down " Grid.Column="4" Grid.Row="1" Height="28" HorizontalAlignment="Left" Margin="155,492,0,0" Name="label3" VerticalAlignment="Top" FontSize="14" Background="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}" ToolTip="Select a community from below to view statistic related to them" Cursor="Hand" >
+            <Label.Effect>
+                <DropShadowEffect/>
+            </Label.Effect>
+        </Label>
     </Grid>
 </Window>
