--- a/GUI-LifeExpectancy/GUI-LifeExpectancy/MainWindow.xaml
+++ b/GUI-LifeExpectancy/GUI-LifeExpectancy/MainWindow.xaml
@@ -107,7 +107,7 @@
                 <DropShadowEffect/>
             </Button.Effect>
         </Button>
-        <Label Content="&#xD;&#xD;There are more than 200 neighbourhoods in Chicago but there is no official list of the city's &#xD; neighbourhoods  or their boundaries. Neighborhood names and identities have evolved over &#xD; time due to real estate development  and changing demographics. Chicago is also divided into &#xD; 78 community areas which were drawn by University of Chicago researchers in 1920s. There &#xD; are various Socio-Economic indicators which play a major role in determining the life-expectancy &#xD; in these neighbourhoods. &#xD;&#xD; Select the neighbourhood from the drop box below and to get a graphical layout of socio-economic &#xD; indicator prevailing in the particular area.  Also check the trend of life-Expectancy in the year &#xD; 1990, 2000 and 2010 in the neighbourhood." Grid.Row="1" Height="245" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="2,202,0,0" Name="label1" VerticalAlignment="Top" Grid.Column="4" FontSize="14" Cursor="Hand" Background="GhostWhite" Width="678">
+        <Label Content="&#xD;There are more than 200 neighbourhoods in Chicago but there is no official list of the city's &#xD; neighbourhoods  or their boundaries. Neighborhood names and identities have evolved over &#xD; time due to real estate development  and changing demographics. Chicago is also divided into &#xD; 78 community areas which were drawn by University of Chicago researchers in 1920s. There &#xD; are various Socio-Economic indicators which play a major role in determining the life-expectancy &#xD; in these neighbourhoods. &#xD;&#xD; Select the neighbourhood from the drop box below and to get a graphical layout of socio-economic &#xD; indicator prevailing in the particular area.  Also check the trend of life-Expectancy in the year &#xD; 1990, 2000 and 2010 in the neighbourhood." Grid.Row="1" Height="245" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="2,202,0,0" Name="label1" VerticalAlignment="Top" Grid.Column="4" FontSize="14" Cursor="Hand" Background="GhostWhite" Width="678">
             <Label.Effect>
                 <DropShadowEffect BlurRadius="1" Color="#FFB9CFB7" ShadowDepth="3" Direction="315" />
             </Label.Effect>
@@ -117,7 +117,7 @@
                 <DropShadowEffect/>
             </Label.Effect>
         </Label>
-        <Label Content="Select the Neighbourhood name from the drop down " Grid.Column="4" Grid.Row="1" Height="28" HorizontalAlignment="Left" Margin="155,484,0,0" Name="label3" VerticalAlignment="Top" FontSize="14" Background="Bisque" ToolTip="Select a community from below to view statistic related to them" Cursor="Hand" >
+        <Label Content="Select the Neighbourhood name from the drop down " Grid.Column="4" Grid.Row="1" Height="28" HorizontalAlignment="Left" Margin="155,478,0,0" Name="label3" VerticalAlignment="Top" FontSize="14" Background="Bisque" ToolTip="Select a community from below to view statistic related to them" Cursor="Hand" >
             <Label.Effect>
                 <DropShadowEffect/>
             </Label.Effect>
