--- a/GUI-LifeExpectancy/GUI-LifeExpectancy/MainWindow.xaml
+++ b/GUI-LifeExpectancy/GUI-LifeExpectancy/MainWindow.xaml
@@ -107,9 +107,9 @@
                 <DropShadowEffect/>
             </Button.Effect>
         </Button>
-        <Label Content="&#xD;There are more than 200 neighbourhoods in Chicago but there is no official list of the city's &#xD; neighbourhoods  or their boundaries. Neighborhood names and identities have evolved over &#xD; time due to real estate development  and changing demographics. Chicago is also divided into &#xD; 78 community areas which were drawn by University of Chicago researchers in 1920s. There &#xD; are various Socio-Economic indicators which play a major role in determining the life-expectancy &#xD; in these neighbourhoods. &#xD;&#xD; Select the neighbourhood from the drop box below and to get a graphical layout of socio-economic &#xD; indicator prevailing in the particular area.  Also check the trend of life-Expectancy in the year &#xD; 1990, 2000 and 2010 in the neighbourhood." Grid.Row="1" Height="245" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="2,202,0,0" Name="label1" VerticalAlignment="Top" Grid.Column="4" FontSize="14" Cursor="Hand" Background="GhostWhite" Width="678">
+        <Label BorderThickness="2" BorderBrush="#FFB9CFB7" Content="&#xD;There are more than 200 neighbourhoods in Chicago but there is no official list of the city's &#xD; neighbourhoods  or their boundaries. Neighborhood names and identities have evolved over &#xD; time due to real estate development  and changing demographics. Chicago is also divided into &#xD; 78 community areas which were drawn by University of Chicago researchers in 1920s. There &#xD; are various Socio-Economic indicators which play a major role in determining the life-expectancy &#xD; in these neighbourhoods. &#xD;&#xD; Select the neighbourhood from the drop box below and to get a graphical layout of socio-economic &#xD; indicator prevailing in the particular area.  Also check the trend of life-Expectancy in the year &#xD; 1990, 2000 and 2010 in the neighbourhood." Grid.Row="1" Height="245" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="2,202,0,0" Name="label1" VerticalAlignment="Top" Grid.Column="4" FontSize="14" Cursor="Hand" Background="GhostWhite" Width="678">
             <Label.Effect>
-                <DropShadowEffect BlurRadius="1" Color="#FFB9CFB7" ShadowDepth="3" Direction="315" />
+                <DropShadowEffect BlurRadius="1" Color="#FFB9CFB7" ShadowDepth="4" Direction="315" />
             </Label.Effect>
         </Label>
         <Label Content="Socio-Economic Indicators Analysis " Grid.Column="4" Grid.Row="1" Height="30" HorizontalAlignment="Right" Margin="0,579,770,0" Name="label2" VerticalAlignment="Top" FontSize="14" Background="Bisque" Width="231" >
@@ -123,5 +123,10 @@
             </Label.Effect>
         </Label>
         <Label Content="Click on Poverty Statistics, Unemployment Statistics, Per Capita Income Statistics and Life Expectancy Statistics tab to see a graphical representationof these socio-economic indicators in the neighbourhoods across Chicago. " Grid.Column="4" Grid.Row="1" Height="28" Background="PapayaWhip" HorizontalAlignment="Center" HorizontalContentAlignment="Center" Margin="0,128,0,0" Name="label4" VerticalAlignment="Top" Width="1365" />
+        <Label  BorderThickness="2" BorderBrush="#FFB9CFB7" Content="&#xD;     In order to find if there is any dependency between Life-Expectancy and various Socio-Economic Indi- &#xD;     cators ;like Poverty, Unemployment and Per-Capita Income, Pearson's Correlation Coefficient is used. " FontSize="14"  Cursor="Hand" Background="GhostWhite" Grid.Column="4" Grid.Row="1" Height="170" HorizontalAlignment="Left" Width="678" Margin="684,202,0,0" Name="label5" VerticalAlignment="Top">
+        <Label.Effect>
+            <DropShadowEffect BlurRadius="1" Color="#FFB9CFB7" ShadowDepth="4" Direction="315" />
+        </Label.Effect>
+            </Label>
     </Grid>
 </Window>
